--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <title>Serwer</title>
   </head>
   <body>
-    <div class="container">
-      <div class="menu">
-        <ul>
-          <li><a href="#main">GŁÓWNA</a></li>
-          <li><a href="#contact">KONTAKT</a></li>
-          <li><a href="#form">FORMULARZ</a></li>
-          <li><a href="#">PYTANIA</a></li>
-        </ul>
-      </div>
+    <div class="menu">
+      <ul>
+        <li><a href="#main">GŁÓWNA</a></li>
+        <li><a href="#questions">PYTANIA</a></li>
+        <li><a href="#form">FORMULARZ</a></li>
+        <li><a href="#contact">KONTAKT</a></li>
+      </ul>
 
+      <span class="button">MENU</span>
+    </div>
+
+    <div class="container">
+      <!-- #### -->
       <div id="main" class="article">
         <div class="article__image img1">
           <div class="image__text">
@@ -43,11 +46,12 @@
           aliquam!
         </section>
       </div>
-
-      <div id="contact" class="article">
+      <!-- #### -->
+      <!-- #### -->
+      <div id="questions" class="article">
         <div class="article__image img2">
           <div class="image__text">
-            <span class="text__border">kontakt | adres</span>
+            <span class="text__border">pytania</span>
           </div>
         </div>
         <section class="section">
@@ -65,7 +69,8 @@
           aliquam!
         </section>
       </div>
-
+      <!-- #### -->
+      <!-- #### -->
       <div id="form" class="article">
         <div class="article__image img3">
           <div class="image__text">
@@ -87,6 +92,30 @@
           aliquam!
         </section>
       </div>
+      <!-- #### -->
+      <!-- #### -->
+      <div id="contact" class="article">
+        <div class="article__image img4">
+          <div class="image__text">
+            <span class="text__border">kontakt | adres</span>
+          </div>
+        </div>
+        <section class="section">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem
+          aspernatur sapiente, minima ipsam, doloremque laborum, quaerat
+          provident fugit enim quis ab debitis sed! Debitis praesentium soluta
+          ratione, quasi quae accusamus ut omnis, sequi optio necessitatibus eum
+          corporis magnam quas, ipsa perferendis consequuntur magni deserunt.
+          Officiis culpa inventore, consequatur soluta nihil reprehenderit iusto
+          optio ut quo nulla sit perferendis iste nostrum. Eveniet itaque,
+          aperiam libero maxime dolorem, aut exercitationem consectetur modi
+          neque similique ex consequuntur! Sunt eligendi officia unde ab eos
+          quam eius labore eum, suscipit expedita error fugit voluptatibus id,
+          pariatur magnam qui accusamus quasi dicta voluptate rem, voluptatem
+          aliquam!
+        </section>
+      </div>
+      <!-- #### -->
     </div>
   </body>
 </html>
